[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/player01.png" type="Texture" id=2]
[ext_resource path="res://audio/sfx/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/sfx/hit_floor.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sfx/step.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/sfx/hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/sfx/shot.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/sfx/reload.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/sfx/wall_jump.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/sfx/no_ammo.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/sfx/bullet_hit_head.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 20 )

[sub_resource type="Animation" id=2]
resource_name = "die"

[sub_resource type="Animation" id=3]
length = 0.5

[sub_resource type="Animation" id=4]
length = 3.0
loop = true
step = 0.25

[sub_resource type="Animation" id=5]
length = 0.5

[sub_resource type="Animation" id=6]
loop = true
step = 0.25

[sub_resource type="Animation" id=7]

[sub_resource type="Animation" id=8]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4, 20 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4, 20 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_speed = 2.0
anims/die = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="AnimationPlayerEffects" type="AnimationPlayer" parent="."]
anims/hit_floor = SubResource( 7 )
anims/jump = SubResource( 8 )

[node name="SFX" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 4 )
volume_db = -20.0

[node name="HitFloor" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="Step" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Die" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Shot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )

[node name="Reload" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )
volume_db = 20.0

[node name="WallJump" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )

[node name="NoAmmo" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 11 )

[node name="ShotInTheHead" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TimerLose" type="Timer" parent="."]
wait_time = 0.5

[node name="Area2DLeft" type="Area2D" parent="."]
position = Vector2( -33, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DLeft"]
position = Vector2( 1, -1 )
shape = SubResource( 9 )

[node name="Area2DRight" type="Area2D" parent="."]
position = Vector2( 29, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRight"]
position = Vector2( 3, 3 )
shape = SubResource( 10 )

[node name="RayCast2DDown" type="RayCast2D" parent="."]
position = Vector2( 0, 23 )
enabled = true
cast_to = Vector2( 0, 6 )
[connection signal="body_entered" from="Area2DLeft" to="." method="_on_Area2DLeft_body_entered"]
[connection signal="body_exited" from="Area2DLeft" to="." method="_on_Area2DLeft_body_exited"]
[connection signal="body_entered" from="Area2DRight" to="." method="_on_Area2DRight_body_entered"]
[connection signal="body_exited" from="Area2DRight" to="." method="_on_Area2DRight_body_exited"]
